<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="general_information">General Information</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="museums">Museums</string>
    <string name="saved_places">Saved Places</string>
    <string name="interesting_apps">Interesting Apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_preview_of_krakow">Map preview of Krakow</string>

    <string name="short_information">Krakow is the second largest and one of the oldest
        cities in Poland. Situated on the Vistula River in the Lesser Poland region.
        Kraków has traditionally been one of the leading centres of Polish academic,
        cultural, and artistic life and is one of Poland\'s most important economic hubs.</string>

    <string name="header_image">header_image</string>
    <string name="bigger_photo_in_details">bigger photo in details</string>
    <string name="phone_icon">phone icon</string>
    <string name="website_icon">website icon</string>
    <string name="location_icon">location icon</string>
    <string name="small_preview_image_for_tourist_attraction">small preview image for tourist attraction</string>
    <string name="icon_more">icon more</string>
    <string name="add_to_saved">add to saved</string>


    <string name="tel">tel:</string>
    <string name="http">http://</string>
    <string name="google_maps_search_link">http://maps.google.com/?q=</string>
    <string name="fancy_restaurants">Fancy Restaurants</string>
    <string name="amazing_spots">Amazing spots</string>
    <string name="finest_places_to_sleep">Finest places to sleep</string>
    <string name="the_best_museums">The best Museums</string>
    <string name="your_saved_places">Your saved places</string>
    <string name="drawable">drawable</string>

    <string name="xml_list">list</string>
    <string name="xml_entry">entry</string>
    <string name="xml_location">location</string>
    <string name="xml_website">website</string>
    <string name="xml_phone_number">phone_number</string>
    <string name="xml_small_image_name">small_image_name</string>
    <string name="xml_image_name">image_name</string>
    <string name="xml_description">description</string>
    <string name="xml_name">name</string>
    <string name="xml_type">type</string>
    <string name="SIGHTSEEING">SIGHTSEEING</string>
    <string name="HOTEL">HOTEL</string>
    <string name="RESTAURANT">RESTAURANT</string>
    <string name="MUSEUM">MUSEUM</string>
    <string name="SAVED_PLACE">SAVED PLACE</string>

</resources>
